--- a/index.html
+++ b/index.html
@@ -376,11 +376,11 @@ function isCollision(head) {
     });
 
     startGame();
-</script>
+</script><br><br>
 All Code is AI-generated. I just made a bunch of prompts, most of the work was due to token limitations and that I know nothing about programming.<br><br>
 
     <br><br>
-    Known bugs: autoplay is trash. im not a programmer, I asked the ai to constrain A8 with a backup safe. <br><br>
+    Known bugs: autoplay is trash. im not a programmer, I asked the ai to constrain A* with a backup safe. <br><br>
     the sound breaks, the colors hide things.<br><br>
     i got bored.<br><br>
     <br><br>
