--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     </style>
 </head>
 <body>
+    <center> Arrow keys to start.<br><br></center>
     <div id="gameArea">
         <button onclick="startGame()">Start Game</button>
         <div id="score">Score: 0</div>
