--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 <body>
    
     <div id="gameArea">
-        <button onclick="startGame()">Start Game</button>
+        <button onclick="startGame()">New Game</button>
         <div id="score">Score: 0</div>
         <label id="toggleSwitch">
-            <input type="checkbox" id="selfPlayToggle"> Self-Play Mode
+            <input type="checkbox" id="selfPlayToggle"> Sentient Snake Mode
         </label>
-        <center> Arrow keys to start.<br><br></center>
+        <center> Arrow keys to start moving.<br><br></center>
         <div id="board"></div>
          <br><br>
 All Code is AI-generated. I just made a bunch of prompts, most of the work was due to token limitations and that I know nothing about programming.<br><br>
